--- a/log in/index.html
+++ b/log in/index.html
@@ -152,7 +152,9 @@ button{
     <form>
         <form actiom="../index.html">
         <h3>Delayota Music Festival</h3>
+          </form>
 
+      <form>
         <label for="username">Username</label>
         <input type="text" placeholder="Email or Phone" id="username">
 
