--- a/log in/index.html
+++ b/log in/index.html
@@ -150,7 +150,7 @@ button{
         <div class="shape"></div>
     </div>
     <form>
-        <form actiom="../index.html">
+        <form action="../index.html">
         <h3>Delayota Music Festival</h3>
         <label for="username">Username</label>
         <input type="text" placeholder="Email or Phone" id="username">
