--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ https://templatemo.com/tm-583-festava-live
 
 
                                     <div class="ms-4">
-                                        <h3>Senyuman Indah!</h3>
+                                        <h3>Tunjukkan kebahagiaanmu</h3>
 
                                         <p class="mb-0">Perlihatkan keseruan kalian</p>
                                     </div>
