--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ https://templatemo.com/tm-583-festava-live
                     <div class="row justify-content-center">
 
                         <div class="col-12 text-center">
-                            <h2 class="mb-4">Siapa yang Akan Memeriakan NadaFest 2025?</h1>
+                            <h2 class="mb-4">Siapa yang Akan Memeriahkan NadaFest 2025?</h1>
                         </div>
 
                         <div class="col-lg-5 col-12">
